--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta name="googlebot" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="manifest" href="manifest.json" />
     <style id="compiled-css" type="text/css">
       @import url(//fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister);
       * {
