made a sitting down cat instead :)

--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
           <div class="app-title">Ryōri-Bon</div>
           <div class="app-logo">
             <pre>
- /\_/\
-(=^.^=)
-(") (")_/</pre
+    /\_/\
+   (=^.^=)
+ \_(_(")(")  </pre
             >
           </div>
         </div>
