--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <title></title>
+    <title>Ryori-Bon</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="googlebot" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" href="/Ryori-Bon/logo512x512.png?v=20220305">
+  </head>
+  …
+Add the example app to an iOS home screen (again) #
+Try adding the example app to an iOS home screen again. This time, a proper icon is generated for the site. If you audit the page again with Lighthouse you'll also see that the Does not provide a valid apple-touch-icon audit now passes.
+The Apple touch icon.
+The Apple touch icon.
+Last updated: Aug 26, 2019 — Improve article
+RETURN TO ARTICLE
+
     <style id="compiled-css" type="text/css">
       @import url(//fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister);
       * {
