--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta name="googlebot" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#D2B48C" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" href="/Ryori-Bon/logo512x512.png?v=20220305">
+    <link rel="apple-touch-icon" href="/Ryori-Bon/logo192x192.png?v=20220305">
   </head>
   …
 Add the example app to an iOS home screen (again) #
