--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Ryori-Bon</title>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="googlebot" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#D2B48C" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
     <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" href="/Ryori-Bon/logo192x192.png?v=20220305">
+    
   </head>
     <style type="text/css">
       @import url(//fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister);
